# BinaryFileParser

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  utils.py
src/: __init__.py  combinators.rs  errors.rs  lib.rs  macros.rs  retrievers.rs  test.py  testc.py  types.rs  utils.py
src/binary_file_parser/: __init__.py  logger.py  utils.py
src/combinators/: combinator.rs  combinator_type.rs  if.rs  if_.rs  set.rs  set_repeat.rs  utils.rs
src/errors/: CompressionError.py  EndOfFileError.py  VersionError.py  compression_error.rs  default_attribute_error.rs  parsing_error.rs  version_error.rs
src/generators/: IncrementalGenerator.py
src/macros/: def_native_type_le.rs  impl_from_for_bfp_type.rs  impl_from_for_combinator_type.rs  impl_from_for_parseable_type.rs  wrap_py.rs
src/objects/: AoE2Scenario.py
src/retrievers/: BaseStruct.py  MapValidate.py  Retriever.py  map_validate.rs  retriever.rs
src/sections/: AoE2Scenario.py  BackgroundImage.py  BaseSection.py  Cinematics.py  DataHeader.py  Diplomacy.py  FileData.py  FileHeader.py  GlobalVictory.py  Map.py  MapData.py  Messages.py  Options.py  PlayerData2.py  ScenarioSections.py  TriggerData.py  UnitData.py  VariableData.py  test.py
src/types/: Array.py  BaseStruct.py  Bool.py  ByteStream.py  Bytes.py  Float.py  IncrementalGenerator.py  Int.py  Parseable.py  ParserType.py  Str.py  __init__.py  base_struct.rs  bfp_list.rs  bfp_type.rs  byte_stream.rs  le.rs  (+5 more)
testing/: test.py  utils.py
tests/: test.py  test_read_de2.py  test_read_old.py
(+206 files in other folders)
